--- a/archived/huawei_ra_coleta_dados.yml
+++ b/archived/huawei_ra_coleta_dados.yml
@@ -1,24 +1,26 @@
 ---
-### COLETA MODELO E Nº SÉRIE - João Vitor Costa Medeiros
+### COLLECT IP ADRESSES INTERFACES TO CREATE A VAR FILES - João Vitor Costa Medeiros
 
-- name: Coleta Dados
+- name: Collect IP Addresses - HUAWEI AR1220 Routers
   hosts: SC0019RA1
   gather_facts: false
 
   tasks:
-    - name: Coleta Informações do roteador Huawei.
+    - name: Collect Interface Data from Huawei Router
       ce_facts:
         gather_subset: interfaces
 
-    - name: Aloca variável.
+    - name: Get Interfaces Variables with IPADDR filter module
       set_fact:
-        Lo0: "{{ all_ipv4_addresses.LoopBack0 | ipaddr('address') }}"
-        Vlan10: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.10'] | ipaddr('address') }}"
-        Vlan759: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.759'] | ipaddr('broadcast') }}"
+        Loopback0: "{{ all_ipv4_addresses.LoopBack0 | ipaddr('address') }}"
+        GigabitEthernet0_0_0_10: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.10'] | ipaddr('address') }}"
+        GigabitEthernet0_0_0_20: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.20'] | ipaddr('address') }}"
+        GigabitEthernet0_0_0_590: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.590'] | ipaddr('address') }}"
+        GigabitEthernet0_0_0_759: "{{ all_ipv4_addresses['GigabitEthernet0/0/0.759'] | ipaddr('address') }}"
 
-    - name: Salvar template
+    - name: Change variables in the Jinja file and Save it.
       template:
-        src: /mnt/c/modelo.txt.j2
+        src: /mnt/c/model.txt.j2
         dest: /mnt/c/{{ inventory_hostname }}.txt
         owner: root
         group: root
