--- a/archived/huawei_sw_nac.yml
+++ b/archived/huawei_sw_nac.yml
@@ -3,15 +3,26 @@
   gather_facts: false
 
   tasks:
-    - name: Corrige Retransmit NAC do Switch Huawei S5700
+    - name: Apply Network Access Control Configuration to Fix ISE Server Communication Issues.
       ce_command:
         commands:
           - system-view
-          - radius-server template radius-mab
-          - radius-server retransmit 3 timeout 7
+          - aaa
+          - accounting-scheme acco
+          - accounting realtime 1440
+          - quit
+          - #
           - radius-server template radius-dot1x
-          - radius-server retransmit 3 timeout 7
+          - radius-server detect-server interval 180
+          - radius-server dead-time 60
+          - radius-server retransmit 4 timeout 10
+          - #
+          - radius-server template radius-mab
+          - radius-server detect-server interval 180
+          - radius-server dead-time 60
+          - radius-server retransmit 4 timeout 10
+          - quit
 
-    - name: Salva as configurações do Switch Huawei S5700
+    - name: Save running-config - Switch Huawei S5700
       ce_config:
         save: yes
