Add new playbook and correct description huawei_sw_nac.yml

--- a/playbooks_tripa/huawei_sw_nac.yml
+++ b/playbooks_tripa/huawei_sw_nac.yml
@@ -1,4 +1,4 @@
-### ACCESS-LIST SWITCHES HUAWEI - João Vitor Costa Medeiros
+### NAC SWITCHES HUAWEI - João Vitor Costa Medeiros
 - hosts: switches_huawei
   gather_facts: false
 
