Edit hosts file and password in all.yml

--- a/playbooks_tripa/cisco_sw_apply_nac_config.yml
+++ b/playbooks_tripa/cisco_sw_apply_nac_config.yml
@@ -1,4 +1,4 @@
-### NAC CONRRECTION ON CISCO SWITCHES INTERFACES - João Vitor Costa Medeiros
+### NAC CORRECTION ON CISCO SWITCHES INTERFACES - João Vitor Costa Medeiros
 - hosts: switches_cisco
   gather_facts: false
 
